# ktables

./: .gitignore  CHANGELOG.md  README.md  conftest.py  data.json  pyproject.toml
.github/actions/publish/: action.yml
.github/workflows/: ci.yml  coverage.yml  pr-title.yml  publish.yml  release-please.yml  test.yml
benchmarks/: README.md  REPORT.md  __init__.py  _harness.py  _writer_proc.py  compare.py  conftest.py  test_barrier.py  test_catchup.py  test_experiment_barrier_fetch_wait.py  test_harness.py  test_memory.py  test_propagation.py  test_reader_cpu.py  test_reads_micro.py  test_write.py
docs/: API.md
docs/adr/: 0001-topic-config-reconciliation.md  0002-durability-defaults-and-acks-knob.md
docs/superpowers/specs/: 2026-06-23-topic-config-reconciliation-design.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6082494b6002d83f_grouped_table_py.html  z_6082494b6002d83f_kafka_table_py.html
ktables/: __init__.py  grouped_table.py  kafka_table.py
tests/: conftest.py  test_grouped_table.py  test_kafka_table.py
