[project]
name = "ktables"
version = "0.1.0"
description = "Materialize a Kafka topic into an in-memory, compacted dict — a GlobalKTable for asyncio Python."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["aiokafka>=0.10"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "pydantic>=2", "typing-extensions>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ktables"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
